# uav-llm-integration

./: .env.conf  .gitignore  Dockerfile  LICENSE  README.md  basic_urdf.sdf  clear_build.sh  compile.sh  init.sh  install_packages.sh  launch_gazebo.sh  llm_instructions.txt  pioneer.urdf  prompt.txt  requirements.txt  run.sh  run_uav_llm_integration.sh  setup.txt  setup_prompt.txt
.devcontainer/: devcontainer.json
gazebo/: gui.config
src/deadman_safety/: package.xml  setup.cfg  setup.py
src/deadman_safety/deadman_safety/: custom_camera_node.py  custom_joy_node.py  deadman_node.py
src/deadman_safety/launch/: deadman.launch.py  deadman_safety.launch.py
src/hardware_drivers/: CMakeLists.txt  package.xml
src/hardware_drivers/src/: ariaNode.cpp
src/llm_integration/: package.xml  setup.cfg  setup.py
src/llm_integration/launch/: llm_integration.launch.py
src/llm_integration/llm_integration/: camera_caption_node.py  llm_node.py  text_in_node.py
src/master_launch/: CMakeLists.txt  package.xml
src/master_launch/launch/: actual.launch.py  sim.launch.py
src/uav_actual/: CMakeLists.txt  package.xml
src/uav_actual/config/: depthai_config.yaml  phidget_spatial_config.yaml  sick_scan_config.yaml
src/uav_actual/launch/: uav_actual.launch.py
src/uav_actual/models/: pioneer.urdf
src/uav_actual/src/: ariaNode.cpp  driver_node.cpp
src/uav_description/: package.xml  setup.cfg  setup.py
src/uav_description/launch/: display.launch.py  simulation.launch.py
src/uav_description/rviz/: default.rviz
src/uav_description/urdf/: pioneer.urdf
src/uav_sim/: CMakeLists.txt  package.xml
src/uav_sim/config/: config.rviz  gaz.config  rviz_config.rviz
src/uav_sim/launch/: sim.launch.py  uav_sim.launch.py
src/uav_sim/models/: pioneer.urdf
src/uav_sim/urdf/: pioneer.urdf
src/uav_simulation/: CMakeLists.txt  package.xml
src/uav_simulation/launch/: simulation.launch.py
src/uav_simulation/src/launch/: sdf.launch.py
src/uav_simulation/src/urdf/: pioneer.urdf
tmp/urdf/: pioneer.urdf
uav-llm/.devcontainer/: Dockerfile
